<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityQuestions"
    tools:showIn="@layout/activity_questions">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/veganstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="40sp" />

        <TextView
            android:labelFor="@+id/inputElectricBill"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/Electric_Bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/inputElectricBill"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/input"
            android:inputType="number"
            android:paddingStart="5dp" />

        <TextView
            android:labelFor="@+id/inputGasBill"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/Gas_Bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/inputGasBill"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/input"
            android:inputType="number"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/Plane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout

            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:text="@string/lessThan4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:paddingLeft="5dp"
                    android:id="@+id/shortFlights"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/input"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:text="@string/moreThan4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:paddingLeft="5dp"
                    android:inputType="number"
                    android:id="@+id/longFlights"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/input" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/recycle"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/chRecycle"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:buttonTint="@color/black"
                    android:paddingStart="5dp" />
            </LinearLayout>
            <LinearLayout
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/car"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/cbCar"
                    android:buttonTint="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llShow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:labelFor="@+id/inputCarValue"
                android:text="@string/km"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/inputCarValue"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:background="@drawable/input"
                android:inputType="number"
                android:paddingLeft="5dp" />
        </LinearLayout>
        <Button
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/caculate"
            android:id="@+id/btnCalculate"
            android:background="@drawable/round_button"
            android:foreground="@drawable/ripple_effect"/>

    </LinearLayout>
</ScrollView>